# note_manager

./: .gitignore  Makefile  README.md  pyproject.toml
note_manager/: google_calendar.py  llama.py  note_manager.py  voice_notes_watcher.py
